log
Sat, Mar 29, 2025  7:05:05 PM: 
 list.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
25021aa
Sat, Mar 29, 2025  7:18:38 PM: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
8691bdc
Sat, Mar 29, 2025  7:22:49 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
274268d
Sat, Mar 29, 2025  7:28:14 PM: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  9|3
total_score: 35/70
9785e8c
Sat, Mar 29, 2025  7:52:35 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
95aae81
Sat, Mar 29, 2025  8:01:20 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
efa6494
Sat, Mar 29, 2025  8:03:12 PM: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
78f65dd
Sat, Mar 29, 2025 10:40:33 PM: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:84:39: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL) return NULL;
                                       ^~~~
list.c:83:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0814597
Sat, Mar 29, 2025 10:50:19 PM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
60e21cf
